--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,4 @@
-/**
-* Template Name: TheEvent - v4.7.0
-* Template URL: https://bootstrapmade.com/theevent-conference-event-bootstrap-template/
-* Author: BootstrapMade.com
-* License: https://bootstrapmade.com/license/
-*/
+contact-us
 
 /*--------------------------------------------------------------
 # General
@@ -14,14 +9,15 @@ body {
   font-family: "Open Sans", sans-serif;
 }
 
+/* style on links/urls */
 a {
-  color: #f82249;
+  color: #566E81;
   text-decoration: none;
   transition: 0.5s;
 }
 
 a:hover, a:active, a:focus {
-  color: #f8234a;
+  color: #566E81;
   outline: none;
   text-decoration: none;
 }
@@ -36,7 +32,7 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: 400;
   margin: 0 0 20px 0;
   padding: 0;
-  color: #0e1b4d;
+  color: #225A82;
 }
 
 .main-page {
@@ -65,7 +61,7 @@ h1, h2, h3, h4, h5, h6 {
   right: 15px;
   bottom: 15px;
   z-index: 996;
-  background: #f82249;
+  background: #566E81;
   width: 40px;
   height: 40px;
   border-radius: 50px;
@@ -77,7 +73,7 @@ h1, h2, h3, h4, h5, h6 {
   line-height: 0;
 }
 .back-to-top:hover {
-  background: #f94a6a;
+  background: #CCE1F4;
   color: #fff;
 }
 .back-to-top.active {
@@ -98,7 +94,7 @@ h1, h2, h3, h4, h5, h6 {
   display: block;
   width: 60px;
   height: 5px;
-  background: #f82249;
+  background: #566E81;
   bottom: 0;
   left: calc(50% - 25px);
 }
@@ -115,7 +111,7 @@ h1, h2, h3, h4, h5, h6 {
   margin: 0;
   font-size: 18px;
   font-weight: 500;
-  color: #9195a2;
+  color: #808886;
 }
 
 .section-with-bg {
@@ -147,7 +143,7 @@ h1, h2, h3, h4, h5, h6 {
   text-transform: uppercase;
 }
 #header #logo h1 span {
-  color: #f82249;
+  color: #566E81;
 }
 #header #logo h1 a, #header #logo h1 a:hover {
   color: #fff;
@@ -164,30 +160,30 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 /*--------------------------------------------------------------
-# Buy Tickets
+# Top bar contact us
 --------------------------------------------------------------*/
-.buy-tickets {
+.contact-us {
   color: #fff;
-  background: #f82249;
+  background: #566E81;
   padding: 7px 22px;
   margin: 0 0 0 15px;
   border-radius: 50px;
-  border: 2px solid #f82249;
+  border: 2px solid #566E81;
   transition: all ease-in-out 0.3s;
   font-weight: 500;
   line-height: 1;
   font-size: 13px;
   white-space: nowrap;
 }
-.buy-tickets:hover {
+.contact-us:hover {
   background: none;
   color: #fff;
 }
-.buy-tickets:focus {
+.contact-us:focus {
   color: #fff;
 }
 @media (max-width: 992px) {
-  .buy-tickets {
+  .contact-us {
     margin: 0 15px 0 0;
   }
 }
@@ -196,7 +192,7 @@ h1, h2, h3, h4, h5, h6 {
 # Navigation Menu
 --------------------------------------------------------------*/
 /**
-* Desktop Navigation 
+* Desktop Navigation
 */
 .navbar {
   padding: 0;
@@ -219,7 +215,7 @@ h1, h2, h3, h4, h5, h6 {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  color: rgba(202, 206, 221, 0.8);
+  color: #D0E2F0;
   font-family: "Raleway", sans-serif;
   font-weight: 600;
   font-size: 14px;
@@ -240,7 +236,7 @@ h1, h2, h3, h4, h5, h6 {
   height: 2px;
   bottom: -6px;
   left: 0;
-  background-color: #f82249;
+  background-color: #566E81;
   visibility: hidden;
   transition: all 0.3s ease-in-out 0s;
 }
@@ -278,7 +274,7 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 12px;
 }
 .navbar .dropdown ul a:hover, .navbar .dropdown ul .active:hover, .navbar .dropdown ul li:hover > a {
-  color: #f82249;
+  color: #566E81;
 }
 .navbar .dropdown:hover > ul {
   opacity: 1;
@@ -306,7 +302,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 /**
-* Mobile Navigation 
+* Mobile Navigation
 */
 .mobile-nav-toggle {
   color: #fff;
@@ -366,7 +362,7 @@ h1, h2, h3, h4, h5, h6 {
   color: #060c22;
 }
 .navbar-mobile a:hover, .navbar-mobile .active, .navbar-mobile li:hover > a {
-  color: #f82249;
+  color: #566E81;
 }
 .navbar-mobile .getstarted, .navbar-mobile .getstarted:focus {
   margin: 15px;
@@ -392,7 +388,7 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 12px;
 }
 .navbar-mobile .dropdown ul a:hover, .navbar-mobile .dropdown ul .active:hover, .navbar-mobile .dropdown ul li:hover > a {
-  color: #f82249;
+  color: #566E81;
 }
 .navbar-mobile .dropdown > .dropdown-active {
   display: block;
@@ -404,7 +400,7 @@ h1, h2, h3, h4, h5, h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url(../img/hero-bg.jpg) top center;
+  background: url(../img/hero-bg.png) top center;
   background-size: cover;
   overflow: hidden;
   position: relative;
@@ -449,7 +445,7 @@ h1, h2, h3, h4, h5, h6 {
   text-transform: uppercase;
 }
 #hero h1 span {
-  color: #f82249;
+  color: #566E81;
 }
 @media (max-width: 991px) {
   #hero h1 {
@@ -469,7 +465,7 @@ h1, h2, h3, h4, h5, h6 {
 #hero .play-btn {
   width: 94px;
   height: 94px;
-  background: radial-gradient(#f82249 50%, rgba(101, 111, 150, 0.15) 52%);
+  background: radial-gradient(#566E81 50%, rgba(101, 111, 150, 0.15) 52%);
   border-radius: 50%;
   display: block;
   position: relative;
@@ -512,7 +508,7 @@ h1, h2, h3, h4, h5, h6 {
   background: rgba(198, 16, 0, 0);
 }
 #hero .play-btn:hover::after {
-  border-left: 15px solid #f82249;
+  border-left: 15px solid #566E81;
   transform: scale(20);
 }
 #hero .play-btn:hover::before {
@@ -546,10 +542,10 @@ h1, h2, h3, h4, h5, h6 {
   color: #fff;
   -webkit-animation-delay: 0.8s;
   animation-delay: 0.8s;
-  border: 2px solid #f82249;
+  border: 2px solid #566E81;
 }
 #hero .about-btn:hover {
-  background: #f82249;
+  background: #566E81;
   color: #fff;
 }
 
@@ -578,7 +574,7 @@ h1, h2, h3, h4, h5, h6 {
 # About Section
 --------------------------------------------------------------*/
 #about {
-  background: url("../img/about-bg.jpg");
+  background: url("../img/about-bg.png");
   background-size: cover;
   overflow: hidden;
   position: relative;
@@ -616,6 +612,7 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 14px;
   margin-bottom: 20px;
   color: #fff;
+
 }
 
 /*--------------------------------------------------------------
@@ -633,20 +630,20 @@ h1, h2, h3, h4, h5, h6 {
   background: rgba(6, 12, 34, 0.76);
   position: absolute;
   left: 0;
-  bottom: -40px;
+  bottom: -101px;
   right: 0;
   text-align: center;
-  padding-top: 10px;
-  transition: all 300ms cubic-bezier(0.645, 0.045, 0.355, 1);
+  padding-top: 8px;
+  transition: all 1000ms cubic-bezier(0.645, 0.045, 0.355, 1);
 }
 #speakers .speaker .details h3 {
   color: #fff;
   font-size: 22px;
   font-weight: 600;
-  margin-bottom: 5px;
+  margin-bottom: 15px;
 }
 #speakers .speaker .details p {
-  color: #fff;
+  color: #fff
   font-size: 15px;
   margin-bottom: 10px;
   font-style: italic;
@@ -662,7 +659,7 @@ h1, h2, h3, h4, h5, h6 {
   color: #fff;
 }
 #speakers .speaker .details a:hover {
-  color: #f82249;
+  color: #566E81;
 }
 #speakers .speaker:hover .details {
   bottom: 0;
@@ -694,7 +691,7 @@ h1, h2, h3, h4, h5, h6 {
   justify-content: center;
 }
 #speakers-details .details .social a:hover {
-  background: #f82249;
+  background: #566E81;
   color: #fff;
 }
 #speakers-details .details .social a i {
@@ -707,107 +704,6 @@ h1, h2, h3, h4, h5, h6 {
   margin-bottom: 10px;
 }
 
-/*--------------------------------------------------------------
-# Schedule Section
---------------------------------------------------------------*/
-#schedule {
-  padding: 60px 0 60px 0;
-}
-#schedule .nav-tabs {
-  text-align: center;
-  margin: auto;
-  display: block;
-  border-bottom: 0;
-  margin-bottom: 30px;
-}
-#schedule .nav-tabs li {
-  display: inline-block;
-  margin-bottom: 0;
-}
-#schedule .nav-tabs a {
-  border: none;
-  border-radius: 50px;
-  font-weight: 600;
-  background-color: #0e1b4d;
-  color: #fff;
-  padding: 10px 100px;
-}
-@media (max-width: 991px) {
-  #schedule .nav-tabs a {
-    padding: 8px 60px;
-  }
-}
-@media (max-width: 767px) {
-  #schedule .nav-tabs a {
-    padding: 8px 50px;
-  }
-}
-@media (max-width: 480px) {
-  #schedule .nav-tabs a {
-    padding: 8px 30px;
-  }
-}
-#schedule .nav-tabs a.active {
-  background-color: #f82249;
-  color: #fff;
-}
-#schedule .sub-heading {
-  text-align: center;
-  font-size: 18px;
-  font-style: italic;
-  margin: 0 auto 30px auto;
-}
-@media (min-width: 991px) {
-  #schedule .sub-heading {
-    width: 75%;
-  }
-}
-#schedule .tab-pane {
-  transition: ease-in-out 0.2s;
-}
-#schedule .schedule-item {
-  border-bottom: 1px solid #cad4f6;
-  padding-top: 15px;
-  padding-bottom: 15px;
-  transition: background-color ease-in-out 0.3s;
-}
-#schedule .schedule-item:hover {
-  background-color: #fff;
-}
-#schedule .schedule-item time {
-  padding-bottom: 5px;
-  display: inline-block;
-}
-#schedule .schedule-item .speaker {
-  width: 60px;
-  height: 60px;
-  overflow: hidden;
-  border-radius: 50%;
-  float: left;
-  margin: 0 10px 10px 0;
-}
-#schedule .schedule-item .speaker img {
-  height: 100%;
-  transform: translateX(-50%);
-  margin-left: 50%;
-  transition: all ease-in-out 0.3s;
-}
-#schedule .schedule-item h4 {
-  font-size: 18px;
-  font-weight: 600;
-  margin-bottom: 5px;
-}
-#schedule .schedule-item h4 span {
-  font-style: italic;
-  color: #19328e;
-  font-weight: normal;
-  font-size: 16px;
-}
-#schedule .schedule-item p {
-  font-style: italic;
-  color: #152b79;
-  margin-bottom: 0;
-}
 
 /*--------------------------------------------------------------
 # Venue Section
@@ -869,46 +765,45 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 /*--------------------------------------------------------------
-# Hotels Section
+# Past Events Section
 --------------------------------------------------------------*/
-#hotels {
+#pastEvents {
   padding: 60px 0;
 }
-#hotels .hotel {
+#pastEvents .event {
   border: 1px solid #e0e5fa;
   background: #fff;
   margin-bottom: 30px;
 }
-#hotels .hotel:hover .hotel-img img {
+#pastEvents .event:hover .event-img img {
   transform: scale(1.1);
 }
-#hotels .hotel-img {
+#pastEvents .event-img {
   overflow: hidden;
   margin-bottom: 15px;
 }
-#hotels .hotel-img img {
+#pastEvents .event-img img {
   transition: 0.3s ease-in-out;
 }
-#hotels h3 {
+#pastEvents h4 {
+  font-size: 22px;
+  padding: 0 20px;
+}
+#pastEvents h3 {
   font-weight: 600;
   font-size: 20px;
-  margin-bottom: 5px;
+  margin-bottom: 20px;
   padding: 0 20px;
 }
-#hotels a {
+#pastEvents a {
   color: #152b79;
 }
-#hotels a:hover {
-  color: #f82249;
+#pastEvents a:hover {
+  color: #566E81;
 }
-#hotels .stars {
-  padding: 0 20px;
-  margin-bottom: 5px;
-}
-#hotels .stars i {
-  color: #ffc31d;
-}
-#hotels p {
+
+
+#pastEvents p {
   padding: 0 20px;
   margin-bottom: 20px;
   color: #060c22;
@@ -932,10 +827,10 @@ h1, h2, h3, h4, h5, h6 {
   height: 12px;
   background-color: #fff;
   opacity: 1;
-  border: 1px solid #f82249;
+  border: 1px solid #566E81;
 }
 #gallery .swiper-pagination .swiper-pagination-bullet-active {
-  background-color: #f82249;
+  background-color: #566E81;
 }
 #gallery .swiper-slide-active {
   text-align: center;
@@ -945,7 +840,7 @@ h1, h2, h3, h4, h5, h6 {
     padding: 40px 0;
   }
   #gallery .swiper-slide-active {
-    border: 5px solid #f82249;
+    border: 5px solid #566E81;
     padding: 4px;
     background: #fff;
     z-index: 1;
@@ -953,215 +848,9 @@ h1, h2, h3, h4, h5, h6 {
     margin-top: 6px;
   }
 }
-
 /*--------------------------------------------------------------
-# Sponsors Section
+# Contact Section
 --------------------------------------------------------------*/
-#supporters {
-  padding: 60px 0;
-}
-#supporters .supporters-wrap {
-  border-top: 1px solid #e0e5fa;
-  border-left: 1px solid #e0e5fa;
-  margin-bottom: 30px;
-}
-#supporters .supporter-logo {
-  padding: 30px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-right: 1px solid #e0e5fa;
-  border-bottom: 1px solid #e0e5fa;
-  overflow: hidden;
-  background: rgba(255, 255, 255, 0.5);
-  height: 160px;
-}
-#supporters .supporter-logo:hover img {
-  transform: scale(1.2);
-}
-#supporters img {
-  transition: all 0.4s ease-in-out;
-}
-
-/*--------------------------------------------------------------
-# F.A.Q Section
---------------------------------------------------------------*/
-#faq {
-  padding: 60px 0;
-}
-#faq .faq-list {
-  padding: 0;
-  list-style: none;
-}
-#faq .faq-list li {
-  border-bottom: 1px solid #e9eaed;
-  margin-bottom: 20px;
-  padding-bottom: 20px;
-}
-#faq .faq-list .question {
-  display: block;
-  position: relative;
-  font-family: #f82249;
-  font-size: 18px;
-  line-height: 24px;
-  font-weight: 400;
-  padding-left: 25px;
-  cursor: pointer;
-  color: #e0072f;
-  transition: 0.3s;
-}
-#faq .faq-list i {
-  font-size: 16px;
-  position: absolute;
-  left: 0;
-  top: -2px;
-}
-#faq .faq-list p {
-  margin-bottom: 0;
-  padding: 10px 0 0 25px;
-}
-#faq .faq-list .icon-show {
-  display: none;
-}
-#faq .faq-list .collapsed {
-  color: black;
-}
-#faq .faq-list .collapsed:hover {
-  color: #f82249;
-}
-#faq .faq-list .collapsed .icon-show {
-  display: inline-block;
-  transition: 0.6s;
-}
-#faq .faq-list .collapsed .icon-close {
-  display: none;
-  transition: 0.6s;
-}
-
-/*--------------------------------------------------------------
-# Subscribe Section
---------------------------------------------------------------*/
-#subscribe {
-  padding: 60px;
-  background: url(../img/subscribe-bg.jpg) center center no-repeat;
-  background-size: cover;
-  overflow: hidden;
-  position: relative;
-}
-#subscribe:before {
-  content: "";
-  background: rgba(6, 12, 34, 0.6);
-  position: absolute;
-  bottom: 0;
-  top: 0;
-  left: 0;
-  right: 0;
-}
-@media (min-width: 1024px) {
-  #subscribe {
-    background-attachment: fixed;
-  }
-}
-#subscribe .section-header h2, #subscribe p {
-  color: #fff;
-}
-#subscribe input {
-  background: #fff;
-  color: #060c22;
-  border: 0;
-  outline: none;
-  margin: 0;
-  padding: 9px 20px;
-  border-radius: 50px;
-  font-size: 14px;
-}
-@media (min-width: 767px) {
-  #subscribe input {
-    min-width: 400px;
-  }
-}
-#subscribe button {
-  border: 0;
-  padding: 9px 25px;
-  cursor: pointer;
-  background: #f82249;
-  color: #fff;
-  transition: all 0.3s ease;
-  outline: none;
-  font-size: 14px;
-  border-radius: 50px;
-}
-#subscribe button:hover {
-  background: #e0072f;
-}
-@media (max-width: 460px) {
-  #subscribe button {
-    margin-top: 10px;
-  }
-}
-
-/*--------------------------------------------------------------
-# Buy Tickets Section
---------------------------------------------------------------*/
-#buy-tickets {
-  padding: 60px 0;
-}
-#buy-tickets .card {
-  border: none;
-  border-radius: 5px;
-  transition: all 0.3s ease-in-out;
-  box-shadow: 0 10px 25px 0 rgba(6, 12, 34, 0.1);
-}
-#buy-tickets .card:hover {
-  box-shadow: 0 10px 35px 0 rgba(6, 12, 34, 0.2);
-}
-#buy-tickets .card hr {
-  margin: 25px 0;
-}
-#buy-tickets .card .card-title {
-  margin: 10px 0;
-  font-size: 14px;
-  letter-spacing: 1px;
-  font-weight: bold;
-}
-#buy-tickets .card .card-price {
-  font-size: 48px;
-  margin: 0;
-}
-#buy-tickets .card ul li {
-  margin-bottom: 20px;
-}
-#buy-tickets .card .text-muted {
-  opacity: 0.7;
-}
-#buy-tickets .card .btn {
-  font-size: 15px;
-  border-radius: 50px;
-  padding: 10px 40px;
-  transition: all 0.2s;
-  background-color: #f82249;
-  border: 0;
-  color: #fff;
-}
-#buy-tickets .card .btn:hover {
-  background-color: #e0072f;
-}
-#buy-tickets #buy-ticket-modal input, #buy-tickets #buy-ticket-modal select {
-  border-radius: 0;
-}
-#buy-tickets #buy-ticket-modal .btn {
-  font-size: 15px;
-  border-radius: 50px;
-  padding: 10px 40px;
-  transition: all 0.2s;
-  background-color: #f82249;
-  border: 0;
-  color: #fff;
-}
-#buy-tickets #buy-ticket-modal .btn:hover {
-  background-color: #e0072f;
-}
-
 /*--------------------------------------------------------------
 # Contact Section
 --------------------------------------------------------------*/
@@ -1176,24 +865,24 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 48px;
   display: inline-block;
   margin-bottom: 10px;
-  color: #f82249;
+  color: #9B7A71;
 }
 #contact .contact-info address, #contact .contact-info p {
   margin-bottom: 0;
-  color: #112363;
+  color: #566E81;
 }
 #contact .contact-info h3 {
   font-size: 18px;
   margin-bottom: 15px;
   font-weight: bold;
   text-transform: uppercase;
-  color: #112363;
+  color: #225A82;
 }
 #contact .contact-info a {
-  color: #4869df;
+  color: #566E81;
 }
 #contact .contact-info a:hover {
-  color: #f82249;
+  color: #7A8E9E;
 }
 #contact .contact-address, #contact .contact-phone, #contact .contact-email {
   margin-bottom: 20px;
@@ -1344,7 +1033,7 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 16px;
 }
 #footer .footer-top .social-links a:hover {
-  background: #f82249;
+  background: #566E81;
   color: #fff;
 }
 #footer .footer-top h4 {
@@ -1354,7 +1043,7 @@ h1, h2, h3, h4, h5, h6 {
   text-transform: uppercase;
   position: relative;
   padding-bottom: 12px;
-  border-bottom: 2px solid #f82249;
+  border-bottom: 2px solid #566E81;
 }
 #footer .footer-top .footer-links {
   margin-bottom: 30px;
@@ -1366,7 +1055,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 #footer .footer-top .footer-links ul i {
   padding-right: 5px;
-  color: #f82249;
+  color: #566E81;
   font-size: 18px;
 }
 #footer .footer-top .footer-links ul li {
@@ -1380,7 +1069,7 @@ h1, h2, h3, h4, h5, h6 {
   color: #eee;
 }
 #footer .footer-top .footer-links ul a:hover {
-  color: #f82249;
+  color: #566E81;
 }
 #footer .footer-top .footer-contact {
   margin-bottom: 30px;
@@ -1397,7 +1086,7 @@ h1, h2, h3, h4, h5, h6 {
   width: 65%;
 }
 #footer .footer-top .footer-newsletter input[type=submit] {
-  background: #f82249;
+  background: #566E81;
   border: 0;
   width: 35%;
   padding: 6px 0;
